# goud_chain

./: .dockerignore  .env.example  .gitattributes  .gitignore  CI_FIXES_SUMMARY.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.dev-perf  FINAL-INTEGRATION-REPORT.md  GC-175-CICD-VALIDATION.md  GC-175-COMPLETION-SUMMARY.md  IMPLEMENTATION_SUMMARY.md  OPERATIONS.md  PUSH-CONFIRMATION.md  README.md  SECURITY_AUDIT_TIMING_SIDECHANNELS.md  TESTS_FIXED_SUMMARY.md  dev  docker-compose.dev.yml  docker-compose.gcp.yml  docker-compose.local.dev-perf.yml  docker-compose.local.dev-react.yml  docker-compose.local.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  run  test-yml-improvement.patch
.github/: PULL_REQUEST_TEMPLATE.md
dashboard/: Dockerfile  auth.html  index.html  package.json  server.js  test.sh
docs/: .gitignore  SECRET_MANAGEMENT.md  VOLUME_MANAGEMENT.md  module-structure.dot
nginx/: cors.conf  nginx-dev.conf  nginx-staging.conf  nginx.conf  nginx.gcp.conf  nginx.local.conf
python/: Dockerfile  README.md  requirements.txt
scripts/: backup-volumes.sh  cleanup-docker.sh  deploy.sh  destroy.sh  generate_module_graph.sh  perf_test_submit.sh  restore-volumes.sh  rotate-secrets.sh  security_test.sh  setup-gcp.sh  setup-secrets.sh  setup-terraform-backend.sh
src/: cli.rs  config.rs  constants.rs  lib.rs  main.rs
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: module_dependencies.rs  privacy_verification.rs  test_cross_block_correlation.rs  test_helpers.rs  test_session_security.rs  test_timestamp_jitter.rs  volume_persistence_test.rs
web/: .dockerignore  .env.test  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  DEBUG_AUTH_FLOW.md  DEVELOPMENT.md  DEVELOPMENT_SETUP.md  Dockerfile  FIXES_SUMMARY.md  MIGRATION.md  MIGRATION_COMPLETE.md  QUICKSTART.md  QUICK_START.md  README.md  SECURITY.md  START_DEV.sh  SUMMARY.md  TEST_INSTRUCTIONS.md  eslint.config.mjs  nginx.conf  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  turbo.json  (+1 more)
(+208 files in other folders)
