[package]
name = "goud_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiny_http = "0.12"
chrono = "0.4"
tokio = { version = "1.42", features = ["full"] }
bincode = "1.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
aes-gcm = "0.10"  # For PIN-based encryption
hmac = "0.12"  # For blind indexes (searchable encryption)
thiserror = "2.0"  # For custom error types
tracing = "0.1"  # For structured logging
tracing-subscriber = "0.3"  # For logging initialization
jsonwebtoken = "9.3.1"

# Pin to avoid edition2024 requirement
[dependencies.base64ct]
version = "=1.6.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
