[package]
name = "goud_chain"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.8", features = ["ws"] }
tower = "0.4"
chrono = "0.4"
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.21"
bincode = "1.3"
uuid = { version = "1.11", features = ["v4", "serde"] }
ed25519-dalek = { version = "2.1", features = ["serde"] }
rand = "0.8"
hex = "0.4"
base64 = "0.21"
aes-gcm = "0.10"
hmac = "0.12"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
jsonwebtoken = "9.3.1"
libc = "0.2"
rocksdb = { version = "0.21", default-features = false, features = ["snappy"] }
once_cell = "1.20"
rayon = "1.10"
blake3 = "1.5"
zeroize = { version = "1.7", features = ["derive"] }
lru = "0.12"
subtle = "2.5"
regex = "1.10"
lazy_static = "1.4"
prometheus = "0.14"
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
[dependencies.base64ct]
version = "=1.6.0"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
